--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="tst">
+		<h1>Testimonials</h1>
+		<div class="box">
+			<p>This product is amazing! I higly recommend it to anyone in need of a solution like this.</p>
+			
+			<em>-Jon Doe</em>
+		</div>
+		<div class="box">
+			<p>Have been using this for few weeks now and it has comletely transformed my workflow.</p>
+			<em>-John Smith<em>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
