--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
 		<div class="box">
 			<p>This product is amazing! I higly recommend it to anyone in need of a solution like this.</p>
 			
-			<em>-Jon Doe</em>
+			<p class="em">-Jon Doe</p>
 		</div>
 		<div class="box">
 			<p>Have been using this for few weeks now and it has comletely transformed my workflow.</p>
-			<em>-John Smith<em>
+			<p class="em">-John Smith</p>
 		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
